--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,15 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.16.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.0"
   },
   "devDependencies": {
