--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
