--- a/server/vercel.json
+++ b/server/vercel.json
@@ -5,5 +5,8 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "src/index.ts" }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
