--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "src/index.ts", "use": "@vercel/node" }
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "src/index.ts" }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "src": "/api/(.*)",
+      "dest": "src/index.ts"
+    }
   ]
 }
