--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [
-      { "source": "/api/(.*)", "destination": "https://your-backend.vercel.app/api/$1" },
+      { "source": "/api/(.*)", "destination": "https://wd-compiler-backend.vercel.app/api/$1" },
       { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
