--- a/server/package.json
+++ b/server/package.json
@@ -15,13 +15,16 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.16.0",
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.16.0"
+    "prisma": "^5.16.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
