--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.0",
+    "pusher": "^5.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
